[package]
name = "liquidlane-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = { version = "0.4.41", features = ["serde"] }
ckb-types = "=1.0.2"
ckb-traits = "=1.0.2"
ckb-sdk = { version = "5.1.0", default-features = false, features = ["rustls-tls"] }
ckb-jsonrpc-types = "=1.0.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "fs"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.5.2", features = ["util"] }
